# sparse-transcoder

./: README.md  pyproject.toml  requirements.txt
sparse_tc/: model.py
sparse_tc/datasets/: __init__.py  image.py  patches.py  registry.py
sparse_tc/models/: __init__.py  autoencoder.py  base.py  dictlearn.py  transcoder.py
