[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-transcoder"
description = "Visualizing high-dimensional data with sparse transcoding."
authors = [
    {name = "Connor Lane", email = "connor.lane858@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
dependencies = [
    "lightning",
    "numpy",
    "torch",
    "torchvision",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/clane9/sparse-transcoder"

[tool.setuptools_scm]
write_to = "sparse_tc/_version.py"

[tool.setuptools.packages.find]
include = ["sparse_tc*"]


[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
